test([trackmeuser]): 인증/인가 기능 테스트